# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013-2014 (c) SkySQL Corporation Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Tue Apr 15 2014 Massimo Siani <massimo.siani@skysql.com>
- Start implementing support for manager.ini

* Mon Apr 14 2014 Massimo Siani <massimo.siani@skysql.com>
- Add the version date, and register it in the API.
- Naming now follows standard conventions.
- Move the API client to the Library.

* Fri Apr 11 2014 Massimo Siani <massimo.siani@skysql.com>
- Fixes for Debian
- Manage Java 6
- Merge debian branch into develop

* Tue Apr 08 2014 Massimo Siani <massimo.siani@skysql.com>
- Rename mariadb-enterprise-monitor to mariadb-manager-monitor
- There is no need to update the version every 30 seconds, set to 5 minutes

* Thu Mar 27 2014 Massimo Siani <massimo.siani@skysql.com>
- Add database information with the system state
- Update libMariaDB-Manager-java dependency

* Wed Mar 26 2014 Massimo Siani <massimo.siani@skysql.com>
- Register the release number in the API, register the Java Library

* Wed Mar 12 2014 Massimo Siani	<massimo.siani@skysql.com>
- Change MariaDB Enterprise to MariaDB Manager

* Thu Feb 27 2014 Massimo Siani <massimo.siani@skysql.com>
- Merge develop and release-1.0.1

* Fri Feb 21 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix Copyright and files headers

* Thu Feb 20 2014 Massimo Siani	<massimo.siani@skysql.com>
- Bump to version 1.7-121

* Tue Feb 18 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix pom.xml
- Merge Timofey's changes

* Thu Feb 13 2014 Massimo Siani	<massimo.siani@skysql.com>
- Deleted duplicate pom.xml

* Wed Feb 12 2014 Massimo Siani <massimo.siani@skysql.com>
- Fix API call for bulk data

* Fri Dec 13 2013 Massimo Siani <massimo.siani@skysql.com>